# golem-shopping-rust

./: .gitignore  Cargo.toml  README.md  golem.yaml
.github/workflows/: ci.yml
benchmark/: report-local.html
common-rust/: golem.yaml
components-rust/shopping-rust-shopping/: Cargo.toml  golem.yaml
components-rust/shopping-rust-shopping/.wit/wit/: main.wit
components-rust/shopping-rust-shopping/src/: cart.rs  common.rs  lib.rs  order.rs  pricing.rs  product.rs  product_search.rs
components-rust/shopping-rust-shopping/src/cart/: mod.rs
components-rust/shopping-rust-shopping/src/common/: mod.rs
components-rust/shopping-rust-shopping/src/order/: mod.rs
components-rust/shopping-rust-shopping/src/pricing/: mod.rs
components-rust/shopping-rust-shopping/src/product/: mod.rs
components-rust/shopping-rust-shopping/src/product_search/: mod.rs
components-rust/shopping-rust-shopping/src/shopping_assistant/: mod.rs
docker/: compose.yaml
docker/published-postgres/: .env
frontend/src/api/services/: cartService.ts  orderService.ts  pricingService.ts  productService.ts
frontend/src/types/: datetime.ts
frontend/src/views/: OrderDetailView.vue  OrderListView.vue
