[package]
name = "shopping_rust_shopping"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# To use common shared libs, use the following:
# common-lib = { path = "../../common-rust/common-lib" }

golem-rust = { workspace = true }
golem-wasi-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
email_address =  { workspace = true }
uuid =  { workspace = true }
regex = "1.12.2"
futures = "0.3.31"
